--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
         </label>
         <button id="OK">OK</button>
     </div>
+    <center id="a">САЙТ В РАЗРАБОТКЕ</center>
 </body>
 </html>
