--- a/1,2,3pr/index.html
+++ b/1,2,3pr/index.html
@@ -13,21 +13,21 @@
     
     <header class="header">
         <div class="menu">
-                <div class="menu__item"><a href="#" class="menu__link">Main</a></div>
-                <div class="menu__item"><a href="#" class="menu__link">News</a></div>
-                <div class="menu__item"><a href="#" class="menu__link">Forums</a></div>
-                <div class="menu__item"><a href="#" class="menu__link">Things</a></div>
-                <div class="menu__item"><a href="#" class="menu__link">FAQ</a></div>
+                <div class="menu__item"><a href="https://www.google.com.ua/" class="menu__link">Main</a></div>
+                <div class="menu__item"><a href="http://www.ismycomputeron.com/" class="menu__link">News</a></div>
+                <div class="menu__item"><a href="https://prodota.ru/forum/" class="menu__link">Forums</a></div>
+                <div class="menu__item"><a href="http://www.leduchamp.com/" class="menu__link">Things</a></div>
+                <div class="menu__item"><a href="https://www.ukraine.com.ua/faq/" class="menu__link">FAQ</a></div>
         </div>
         <div href="#" id="btn" class="btn">&#9776;</div>
     </header>
     <header class="header_med">
             <div class="menu">
-                    <div class="menu__item"><a href="#" class="menu__link">Main</a></div>
-                    <div class="menu__item"><a href="#" class="menu__link">News</a></div>
-                    <div class="menu__item"><a href="#" class="menu__link">Forums</a></div>
-                    <div class="menu__item"><a href="#" class="menu__link">Things</a></div>
-                    <div class="menu__item"><a href="#" class="menu__link">FAQ</a></div>
+                    <div class="menu__item"><a href="https://www.google.com.ua/" class="menu__link">Main</a></div>
+                    <div class="menu__item"><a href="http://www.ismycomputeron.com/" class="menu__link">News</a></div>
+                    <div class="menu__item"><a href="https://prodota.ru/forum/" class="menu__link">Forums</a></div>
+                    <div class="menu__item"><a href="http://www.leduchamp.com/" class="menu__link">Things</a></div>
+                    <div class="menu__item"><a href="https://www.ukraine.com.ua/faq/" class="menu__link">FAQ</a></div>
             </div>
     <a hre="#" id="menu" class="btn">&#9776;</a>
     </header>
@@ -42,10 +42,10 @@
                 <div class="cl4"></div>
             </div>
         </div>
-        <div calss="modal__el"><p>Name</p><input type="text" class="nm"></div>
-        <div calss="modal__el"><p>Surname</p><input type="text" class="snm"></div>
+        <div calss="modal__el"><p>Name</p><input type="text" class="nm" value="Andrii"></div>
+        <div calss="modal__el"><p>Surname</p><input type="text" class="snm" value="Motornyi"></div>
         <div calss="modal__el"><p>Date</p><input type="date" class="dt"><br></div>
-        <div calss="modal__el"><input type="checkbox" class="gnd"><p>Male</p></div>
+        <div calss="modal__el"><input type="checkbox" class="gnd" checked><p>Male</p></div>
         <div calss="modal__el"><input type="checkbox" class="gnd"><p>Female</p></div>
         
         </div>
@@ -76,5 +76,6 @@
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div>
         </div>
+        <div id="block" class="block"></div>
 </body>
 </html>
